--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-TW">
 <head>
 <meta charset="utf-8">
 <title>坦克兵工廠嚴選備份 </title>
 
-<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-<meta name="author" content="Hakim El Hattab">
+<meta name="description" content="自坦克兵工廠論壇關閉後，將改裝嚴選備份於此網頁，供大家參考。">
+<meta name="author" content="林建安">
 
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
@@ -38,12 +38,12 @@
 <!-- Any section element inside of this container is displayed as a slide -->
 <div class="slides">
         <section>
-            <h1>你好帥</h1>
+            <h1><font face="微軟正黑體">你好帥</font></h1>
            
         </section>
         	
         <section>
-            <h2>好無聊</h2>
+            <h2><font face="微軟正黑體">好無聊</font></h2>
             <p>
             </p>
         </section>
