--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
 <div class="slides">
         <section>
             <h1><font face="微軟正黑體">你好帥</font></h1>
+		<ul class="menu">
+			<li class="menu-campus">
+				<a href="javascript:;" class="over">Campus</a>
+			</li>
+			<li class="menu-office">
+				<a href="javascript:;">Office</a>
+			</li>
+			<li class="menu-kitchen">
+				<a href="javascript:;">Kitchen</a>
+			</li>
+			<li class="menu-tip">
+				<a href="javascript:;">Tips</a>
+			</li>
+		</ul>
            
         </section>
         	
