--- a/index.html
+++ b/index.html
@@ -25,6 +25,24 @@
     link.type = 'text/css';
     link.href = window.location.search.match( /print-pdf/gi ) ? 'https://cad-lab.github.io/cadlab_data/reveal/css/print/pdf.css' : 'https://cad-lab.github.io/cadlab_data/reveal/css/print/paper.css';
     document.getElementsByTagName( 'head' )[0].appendChild( link );
+	<!--<link rel="shortcut icon" href="/_images/favicon.ico" />-->
+	
+	<!-- Web Styles -->
+	<link type="text/css" rel="stylesheet" media="all" href="_css/reset.css" />
+	<link type="text/css" rel="stylesheet" media="screen" href="_css/screen.css" />
+	<link type="text/css" rel="stylesheet" media="screen" href="_js/facebox/facebox.css" />
+
+	
+	<!--<script type="text/javascript" src="_js/jquery-1.6.1.min.js"></script>-->
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
+	<script type="text/javascript" src="_js/facebox/facebox.js"></script>
+	<script type="text/javascript" src="_js/DD_belatedPNG_0.0.8a-min.js"></script>
+	<script type="text/javascript" src="_js/projectgreen.js"></script>
+	
+	<!--[if IE 6]>
+		<script type="text/javascript">
+			DD_belatedPNG.fix('.previousButton, .nextButton, .campus-labels a, .office-labels a, .kitchen-labels a, .tip1, .tip2, .tip3, .tip4, .t
 </script>
 
 <!--[if lt IE 9]>
